- Added support for constructors in interfaces to force constructor signature
  checks in implementations. (Marcus)
- Added memory_get_peak_usage() function for retrieving peak memory usage of
  a PHP script. (Ilia)
- Added pg_field_table() function. (Edin)
- Added SimpleXMLElement::saveXML() as an alias for SimpleXMLElement::asXML().
  (Hannes)

- Optimized zend_try/zend_catch macros by eliminating memcpy(3). (Dmitry)
- Optimized require_once() and include_once() by eliminating fopen(3)
  on second usage. (Dmitry)
- Optimized request shutdown sequence. Restoring ini directives now iterates
  only over modified directives instead of all. (Dmitry)

- Fixed memory leaks in openssl streams context options. (Pierre)
- Fixed handling of extremely long paths inside tempnam() function. (Ilia)
- Fixed bug #38086 (stream_copy_to_stream() returns 0 when maxlen is bigger 
  than the actual length). (Tony)
- Fixed bug #38072 (boolean arg for mysqli_autocommit() is always true on 
  Solaris). (Tony)
- Fixed bug #38067 (Parameters are not decoded from utf-8 when using encoding
  option). (Dmitry)
- Fixed bug #38055 (Wrong interpretation of boolean parameters). (Dmitry)
- Fixed bug #38019 (segfault extending mysqli class). (Dmitry)
- Fixed bug #38005 (SoapFault faultstring doesn't follow encoding rules).
  (Dmitry)
- Fixed bug #38004 (Parameters in SoapServer are decoded twice). (Dmitry)
- Fixed bug #38003 (in classes inherited from MySQLi it's possible to call 
  private constructors from invalid context). (Tony)
- Fixed bug #37987 (invalid return of file_exists() in safe mode). (Ilia)
- Fixed bug #37947 (zend_ptr_stack reallocation problem). (Dmitry)
- Fixed bug #37931 (possible crash in OCI8 after database restart 
  when using persistent connections). (Tony)
- Fixed bug #37920 (compilation problems on z/OS). (Tony)
- Fixed bug #37864 (file_get_contents() leaks on empty file). (Hannes)
- Fixed bug #37862 (Integer pointer comparison to numeric value).